--- a/gdx/proj/gdx.vcxproj
+++ b/gdx/proj/gdx.vcxproj
@@ -113,6 +113,8 @@
     <ClCompile Include="..\src\Mesh.cpp" />
     <ClCompile Include="..\src\MipMapGenerator.cpp" />
     <ClCompile Include="..\src\NumberUtils.cpp" />
+    <ClCompile Include="..\src\OrthographicCamera.cpp" />
+    <ClCompile Include="..\src\PerspectiveCamera.cpp" />
     <ClCompile Include="..\src\Pixmap.cpp" />
     <ClCompile Include="..\src\PixmapIO.cpp" />
     <ClCompile Include="..\src\PixmapTextureData.cpp" />
@@ -170,6 +172,8 @@
     <ClInclude Include="..\include\Mesh.h" />
     <ClInclude Include="..\include\MipMapGenerator.h" />
     <ClInclude Include="..\include\NumberUtils.h" />
+    <ClInclude Include="..\include\OrthographicCamera.h" />
+    <ClInclude Include="..\include\PerspectiveCamera.h" />
     <ClInclude Include="..\include\Pixmap.h" />
     <ClInclude Include="..\include\PixmapIO.h" />
     <ClInclude Include="..\include\PixmapTextureData.h" />
