--- a/tests/gdx-tests/proj/gdx-tests.vcxproj.filters
+++ b/tests/gdx-tests/proj/gdx-tests.vcxproj.filters
@@ -82,6 +82,9 @@
     <ClInclude Include="..\include\Gdx2DTest.h">
       <Filter>inlcude</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\SpriteBatchShaderTest.h">
+      <Filter>inlcude</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\dllmain.cpp">
