--- a/tests/gdx-tests/proj/gdx-tests.vcxproj
+++ b/tests/gdx-tests/proj/gdx-tests.vcxproj
@@ -93,6 +93,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Gdx2DTest.h" />
+    <ClInclude Include="..\include\MipMapTest.h" />
+    <ClInclude Include="..\include\SimpleVertexShader.h" />
     <ClInclude Include="..\include\SpriteBatchRotationTest.h" />
     <ClInclude Include="..\include\AlphaTest.h" />
     <ClInclude Include="..\include\FrustumTest.h" />
@@ -111,6 +113,7 @@
     <ClInclude Include="..\include\VertexArrayClassTest.h" />
     <ClInclude Include="..\include\VertexArrayTest.h" />
     <ClInclude Include="..\include\VertexBufferObjectShaderTest.h" />
+    <ClInclude Include="..\incl\Shapes.h" />
     <ClInclude Include="..\incl\stdafx.h" />
     <ClInclude Include="..\incl\targetver.h" />
   </ItemGroup>
