--- a/backends/gdx-backend-wogl/proj/gdx-backend-wogl.vcxproj
+++ b/backends/gdx-backend-wogl/proj/gdx-backend-wogl.vcxproj
@@ -89,7 +89,7 @@
     <ClInclude Include="..\exp\WoglGL20.h" />
     <ClInclude Include="..\exp\WoglGLCommon.h" />
     <ClInclude Include="..\exp\WoglGraphics.h" />
-    <ClInclude Include="..\exp\WoglInput.h" />
+    <ClInclude Include="..\exp\WindowsInput.h" />
     <ClInclude Include="..\incl\Controller.h" />
     <ClInclude Include="..\incl\ControllerGL.h" />
     <ClInclude Include="..\incl\procedure.h" />
@@ -125,7 +125,7 @@
     <ClCompile Include="..\src\WoglGL20.cpp" />
     <ClCompile Include="..\src\WoglGLCommon.cpp" />
     <ClCompile Include="..\src\WoglGraphics.cpp" />
-    <ClCompile Include="..\src\WoglInput.cpp" />
+    <ClCompile Include="..\src\WindowsInput.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\ReadMe.txt" />
