--- a/gdx/proj/gdx.vcxproj
+++ b/gdx/proj/gdx.vcxproj
@@ -103,6 +103,8 @@
     <ClCompile Include="..\src\Gdx2DPixmap.cpp" />
     <ClCompile Include="..\src\GdxRuntimeException.cpp" />
     <ClCompile Include="..\src\IndexBufferObject.cpp" />
+    <ClCompile Include="..\src\InputAdapter.cpp" />
+    <ClCompile Include="..\src\InputMultiplexer.cpp" />
     <ClCompile Include="..\src\lodepng.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
@@ -166,6 +168,9 @@
     <ClInclude Include="..\include\IndexBufferObject.h" />
     <ClInclude Include="..\include\IndexData.h" />
     <ClInclude Include="..\include\Input.h" />
+    <ClInclude Include="..\include\InputAdapter.h" />
+    <ClInclude Include="..\include\InputMultiplexer.h" />
+    <ClInclude Include="..\include\InputProcessor.h" />
     <ClInclude Include="..\include\MathUtils.h" />
     <ClInclude Include="..\include\Matrix3.h" />
     <ClInclude Include="..\include\Matrix4.h" />
