IndexBufferObjectClassTest and IndexBufferObjectShaderTest

--- a/tests/gdx-tests/proj/gdx-tests.vcxproj
+++ b/tests/gdx-tests/proj/gdx-tests.vcxproj
@@ -93,6 +93,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Gdx2DTest.h" />
+    <ClInclude Include="..\include\IndexBufferObjectClassTest.h" />
+    <ClInclude Include="..\include\IndexBufferObjectShaderTest.h" />
     <ClInclude Include="..\include\MipMapTest.h" />
     <ClInclude Include="..\include\SimpleVertexShader.h" />
     <ClInclude Include="..\include\SpriteBatchRotationTest.h" />
