Action, Actor, Cullable, Group, Stage - first attempt.

--- a/gdx/proj/gdx.vcxproj
+++ b/gdx/proj/gdx.vcxproj
@@ -74,6 +74,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\%40Git\gdx\src\Action.cpp" />
+    <ClCompile Include="..\..\..\%40Git\gdx\src\Actor.cpp" />
+    <ClCompile Include="..\..\..\%40Git\gdx\src\Cullable.cpp" />
+    <ClCompile Include="..\..\..\%40Git\gdx\src\Group.cpp" />
+    <ClCompile Include="..\..\..\%40Git\gdx\src\OnActionCompleted.cpp" />
+    <ClCompile Include="..\..\..\%40Git\gdx\src\Stage.cpp" />
     <ClCompile Include="..\lib\stb_image.c">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
@@ -142,6 +148,12 @@
     <ClCompile Include="..\src\VertexBufferObject.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\%40Git\gdx\include\Action.h" />
+    <ClInclude Include="..\..\..\%40Git\gdx\include\Actor.h" />
+    <ClInclude Include="..\..\..\%40Git\gdx\include\Cullable.h" />
+    <ClInclude Include="..\..\..\%40Git\gdx\include\Group.h" />
+    <ClInclude Include="..\..\..\%40Git\gdx\include\OnActionCompleted.h" />
+    <ClInclude Include="..\..\..\%40Git\gdx\include\Stage.h" />
     <ClInclude Include="..\include\Application.h" />
     <ClInclude Include="..\include\ApplicationListener.h" />
     <ClInclude Include="..\include\BoundingBox.h" />
