--- a/gdx/proj/gdx.vcxproj.filters
+++ b/gdx/proj/gdx.vcxproj.filters
@@ -189,6 +189,9 @@
     <ClCompile Include="..\src\Stage.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\PerspectiveCamController.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\etc1_utils.h">
@@ -399,6 +402,9 @@
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="..\include\Stage.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\PerspectiveCamController.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
