--- a/gdx-audio/proj/gdx-audio.vcxproj
+++ b/gdx-audio/proj/gdx-audio.vcxproj
@@ -49,11 +49,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;GDXAUDIO_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\include;..\incl;..\..\gdx\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\include;..\incl;..\..\gdx\include;..\extern\mpg123\ports\MSVC++\;..\extern\mpg123\src\libmpg123\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>..\extern\mpg123\ports\MSVC++\2008\Debug\;$(OutDir)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libmpg123.lib;gdx.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -64,13 +66,15 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;GDXAUDIO_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\include;..\incl;..\..\gdx\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\include;..\incl;..\..\gdx\include;..\extern\mpg123\ports\MSVC++\;..\extern\mpg123\src\libmpg123\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalLibraryDirectories>..\extern\mpg123\ports\MSVC++\2008\Debug;$(OutDir)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libmpg123.lib;gdx.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -80,6 +84,8 @@
   <ItemGroup>
     <ClCompile Include="..\src\dllmain.cpp" />
     <ClCompile Include="..\src\gdx-audio.cpp" />
+    <ClCompile Include="..\src\Mp3File.cpp" />
+    <ClCompile Include="..\src\Mpg123Decoder.cpp" />
     <ClCompile Include="..\src\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -87,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Mpg123Decoder.h" />
+    <ClInclude Include="..\incl\Mp3File.h" />
     <ClInclude Include="..\incl\stdafx.h" />
     <ClInclude Include="..\incl\targetver.h" />
   </ItemGroup>
