added libmpg123 MSVC build

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ Debug/
 Release/
 ipch/
 *.aps
+!gdx-audio/extern/mpg123/ports/MSVC++/2008/Debug/
+!gdx-audio/extern/mpg123/ports/MSVC++/2008/Release/
+
 
 # Mac #
 ###################
