audio (in work)

--- a/backends/gdx-backend-wogl/proj/gdx-backend-wogl.vcxproj
+++ b/backends/gdx-backend-wogl/proj/gdx-backend-wogl.vcxproj
@@ -79,6 +79,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\exp\WindowsAudio.h" />
+    <ClInclude Include="..\exp\WindowsAudioDevice.h" />
     <ClInclude Include="..\exp\WindowsTimer.h" />
     <ClInclude Include="..\exp\WoglFileHandleStream.h" />
     <ClInclude Include="..\exp\WoglApplication.h" />
@@ -100,6 +102,8 @@
     <ClInclude Include="..\incl\Window.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\WindowsAudio.cpp" />
+    <ClCompile Include="..\src\WindowsAudioDevice.cpp" />
     <ClCompile Include="..\src\WindowsTimer.cpp" />
     <ClCompile Include="..\src\WoglFileHandleStream.cpp" />
     <ClCompile Include="..\extern\glew.c">
