--- a/tests/gdx-tests/proj/gdx-tests.vcxproj.filters
+++ b/tests/gdx-tests/proj/gdx-tests.vcxproj.filters
@@ -127,6 +127,9 @@
     <ClInclude Include="..\include\Mpg123Test.h">
       <Filter>inlcude</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\AudioDeviceTest.h">
+      <Filter>inlcude</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\dllmain.cpp">
